# pairplots

./: .gitignore  CITATION.md  README.md  environment.yml  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: CI.yml  CI_Windows.yml  CI_large_nightly.yml  CI_mac.yml  pypi_deploy.yml  update_backend.yml
examples/: example.py  mychain.fits
pairplots/: .gitignore  __init__.py  __main__.py  julia_helpers.py  julia_import.py  juliapkg.json  python_interface.py
